--- a/views/public/pages/certifcate/add.pug
+++ b/views/public/pages/certifcate/add.pug
@@ -139,8 +139,8 @@ html(lang='en')
                       .form-group
                         label(for='doc_select') Hujjat turini tanlang
                         select#doc_select.form-control
-                          option(value='1') o’lchash vositasini qiyoslash guvohnomasi*
-                          option(value='2') Yuqori aniqlikdagi o&lsquo;lchash vositasini qiyoslash guvohnomasi*
+                          option(value='1') o’lchash vositasini qiyoslash guvohnomasi
+                          option(value='2') Yuqori aniqlikdagi o&lsquo;lchash vositasini qiyoslash guvohnomasi
                           option(value='3') Avtosisterna o&grave;lchash vositasining qiyoslash guvoh nomasi
                           option(value='4') Sinov vositasini metrologik attestatsiyadan o&lsquo;tkazish sertifikati
                           option(value='5') O&lsquo;lchash vositasining qo&lsquo;llanishga yaroqsizligi haqida xabarnoma
@@ -1236,7 +1236,7 @@ html(lang='en')
                         .form-group.row
                           label.col-sm-2.col-form-label обозначение и наименование нормативного документа
                           .col-sm-10
-                            input.form-control(name='line10' required='' placeholder='хатолик чегаралари, аниклик класси')
+                            input.form-control(name='line10' required='' placeholder='обозначение и наименование нормативного документа')
                     .row
                       .col-md-12
                         .form-group.row
