--- a/views/public/pages/certifcate/edit.pug
+++ b/views/public/pages/certifcate/edit.pug
@@ -175,6 +175,7 @@ html(lang='en')
                             label.col-sm-2.col-form-label &mcy;&iecy;&tcy;&rcy;&ocy;&lcy;&ocy;&gcy;&icy;&kcy; &tcy;&acy;&vcy;&scy;&icy;&fcy;&lcy;&icy;
                             .col-sm-10
                               textarea.form-control(id='' required='' name='line6'  value=data.line6 cols='30' rows='3' placeholder='ўлчаш воситаларини параметрларнинг номи, ўлчашлар, хатолик чегаралари, аниклик даражаси')
+                              | #{data.line6}
                       .row
                         .col-md-12
                           .form-group.row
@@ -187,6 +188,7 @@ html(lang='en')
                             label.col-sm-2.col-form-label &tcy;&acy;&lcy;&acy;&bcy;&lcy;&acy;&rcy;&icy;&gcy;&acy; &mcy;&ocy;&scy;&lcy;&icy;&gcy;&icy;
                             .col-sm-10
                               textarea.form-control(id='' name='line9'  value=data.line9 required='' cols='30' rows='3' placeholder='ўлчаш воситаларига куйиладиган талабларини регламентловчи норматив хужжат белгиланиши ва номи,ўлчаш  воситаси турининг таърифи')
+                              | #{data.line9}
                       .row
                         .col-md-6
                           .form-group.row
