--- a/views/public/pages/certifcate/add.pug
+++ b/views/public/pages/certifcate/add.pug
@@ -153,7 +153,7 @@ html(lang='en')
                         .form-group.row
                           label.col-sm-2.col-form-label Hujat idisi
                           .col-sm-10
-                            input.form-control(type='text' required='' name='ids' placeholder='hujjat idsi (kiritish ixtiyor)')
+                            input.form-control(type='text'  name='ids' placeholder='hujjat idsi (kiritish ixtiyor)')
                     
                     .row
                       .col-md-6
@@ -232,7 +232,7 @@ html(lang='en')
                         .form-group.row
                           label.col-sm-2.col-form-label Держатель документов
                           .col-sm-10
-                            input.form-control(type='text' required='' name='ids' placeholder='идентификатор документа (необязательно)')
+                            input.form-control(type='text'  name='ids' placeholder='идентификатор документа (необязательно)')
                     
                     .row
                       .col-md-6
@@ -318,7 +318,7 @@ html(lang='en')
                         .form-group.row
                           label.col-sm-2.col-form-label Hujat idisi
                           .col-sm-10
-                            input.form-control(type='text' required='' name='ids' placeholder='hujjat idsi (kiritish ixtiyor)')
+                            input.form-control(type='text'  name='ids' placeholder='hujjat idsi (kiritish ixtiyor)')
           
                     .row
                       .col-md-6
@@ -403,7 +403,7 @@ html(lang='en')
                         .form-group.row
                           label.col-sm-2.col-form-label Держатель документов
                           .col-sm-10
-                            input.form-control(type='text' required='' name='ids' placeholder='идентификатор документа (необязательно)')
+                            input.form-control(type='text'  name='ids' placeholder='идентификатор документа (необязательно)')
                     
                     .row
                       .col-md-6
@@ -495,7 +495,7 @@ html(lang='en')
                         .form-group.row
                           label.col-sm-2.col-form-label Hujat idisi
                           .col-sm-10
-                            input.form-control(type='text' required='' name='ids' placeholder='hujjat idsi (kiritish ixtiyor)')
+                            input.form-control(type='text'  name='ids' placeholder='hujjat idsi (kiritish ixtiyor)')
                     
                     h6.text-center O&grave;lchash vositasi haqida ma&grave;lumot
                     .row
@@ -748,7 +748,7 @@ html(lang='en')
                         .form-group.row
                           label.col-sm-2.col-form-label Держатель документов
                           .col-sm-10
-                            input.form-control(type='text' required='' name='ids' placeholder='идентификатор документа (необязательно)')
+                            input.form-control(type='text'  name='ids' placeholder='идентификатор документа (необязательно)')
                     
                     h6.text-center Информация о средстве измерений 
                     .row
@@ -1000,7 +1000,7 @@ html(lang='en')
                         .form-group.row
                           label.col-sm-2.col-form-label Hujat idisi
                           .col-sm-10
-                            input.form-control(type='text' required='' name='ids' placeholder='hujjat idsi (kiritish ixtiyor)')
+                            input.form-control(type='text'  name='ids' placeholder='hujjat idsi (kiritish ixtiyor)')
                     
                     .row
                       .col-md-6
@@ -1084,7 +1084,7 @@ html(lang='en')
                         .form-group.row
                           label.col-sm-2.col-form-label Держатель документов
                           .col-sm-10
-                            input.form-control(type='text' required='' name='ids' placeholder='идентификатор документа (необязательно)')
+                            input.form-control(type='text'  name='ids' placeholder='идентификатор документа (необязательно)')
                     
                     .row
                       .col-md-6
@@ -1174,7 +1174,7 @@ html(lang='en')
                         .form-group.row
                           label.col-sm-2.col-form-label Hujat idisi
                           .col-sm-10
-                            input.form-control(type='text' required='' name='ids' placeholder='hujjat idsi (kiritish ixtiyor)')
+                            input.form-control(type='text'  name='ids' placeholder='hujjat idsi (kiritish ixtiyor)')
                     
                     .row
                       .col-md-12
@@ -1265,7 +1265,7 @@ html(lang='en')
                         .form-group.row
                           label.col-sm-2.col-form-label Держатель документов
                           .col-sm-10
-                            input.form-control(type='text' required='' name='ids' placeholder='идентификатор документа (необязательно)')
+                            input.form-control(type='text'  name='ids' placeholder='идентификатор документа (необязательно)')
                     
                     .row
                       .col-md-12
@@ -1351,7 +1351,7 @@ html(lang='en')
                         .form-group.row
                           label.col-sm-2.col-form-label Hujat idisi
                           .col-sm-10
-                            input.form-control(type='text' required='' name='ids' placeholder='hujjat idsi (kiritish ixtiyor)')
+                            input.form-control(type='text'  name='ids' placeholder='hujjat idsi (kiritish ixtiyor)')
                     
                     .row
                       .col-md-6
@@ -1421,7 +1421,7 @@ html(lang='en')
                         .form-group.row
                           label.col-sm-2.col-form-label Держатель документов
                           .col-sm-10
-                            input.form-control(type='text' required='' name='ids' placeholder='идентификатор документа (необязательно)')
+                            input.form-control(type='text'  name='ids' placeholder='идентификатор документа (необязательно)')
                     
                     .row
                       .col-md-6
@@ -1492,7 +1492,7 @@ html(lang='en')
                         .form-group.row
                           label.col-sm-2.col-form-label Hujat idisi
                           .col-sm-10
-                            input.form-control(type='text' required='' name='ids' placeholder='hujjat idsi (kiritish ixtiyor)')
+                            input.form-control(type='text'  name='ids' placeholder='hujjat idsi (kiritish ixtiyor)')
                     
                     .row
                       .col-md-12
@@ -1593,7 +1593,7 @@ html(lang='en')
                         .form-group.row
                           label.col-sm-2.col-form-label Держатель документов
                           .col-sm-10
-                            input.form-control(type='text' required='' name='ids' placeholder='идентификатор документа (необязательно)')
+                            input.form-control(type='text'  name='ids' placeholder='идентификатор документа (необязательно)')
                     
                     .row
                       .col-md-12
