--- a/views/public/pages/certifcate/add.pug
+++ b/views/public/pages/certifcate/add.pug
@@ -699,7 +699,7 @@ html(lang='en')
                           td(colspan='3')
                             button.btn.btn-outline-primary.btn-fw.text-center(type='button' style='width: 100%;' id='table-dynamik+') +
                           td(colspan='1')
-                            button#table-dynamik-.btn.btn-outline-danger.btn-fw.text-center(type='button' style='width: 100%;') -
+                            button.btn.btn-outline-danger.btn-fw.text-center(type='button' style='width: 100%;' id='table-dynamik-') -
                     h6.text-center(style='padding-top: 3vh;') XULOSA
                     .row
                       .col-md-12
@@ -856,7 +856,7 @@ html(lang='en')
                             | Высота уровня 
                             br
                             | (планка)(cm)
-                      tbody#table2
+                      tbody#table3
                         tr
                           td
                             input.d-none(type='text' name='line16_name' required='' value='1 я секция')
@@ -948,9 +948,9 @@ html(lang='en')
                             input.form-control(type='text' name='jami_2' placeholder='jami')
                         tr
                           td(colspan='3')
-                            button.btn.btn-outline-primary.btn-fw.text-center(type='button' style='width: 100%;' id='table-dynamik+') +
+                            button.btn.btn-outline-primary.btn-fw.text-center(type='button' style='width: 100%;' id='table-dynamik1+') +
                           td(colspan='1')
-                            button#table-dynamik-.btn.btn-outline-danger.btn-fw.text-center(type='button' style='width: 100%;') -
+                            button.btn.btn-outline-danger.btn-fw.tamext-center(type='button' style='width: 100%;' id='table-dynamik1-') -
                     h6.text-center(style='padding-top: 3vh;') ЗАКЛЮЧЕНИЕ
                     .row
                       .col-md-12
